<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.present_card.MainActivity">

    <Button android:layout_width="match_parent" android:layout_height="50dp"
            android:id="@+id/btnInit"
            android:text="@string/initialize"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/color_base"
            android:textColor="@color/color_text_pressed"
            android:layout_gravity="center"/>


    <Button android:layout_width="match_parent" android:layout_height="50dp"
            android:id="@+id/btnTransact"
            android:text="@string/transact"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/color_base"
            android:textColor="@color/color_text_pressed"
            android:layout_gravity="center"/>


    <Button android:layout_width="match_parent" android:layout_height="50dp"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/color_base"
            android:textColor="@color/color_text_pressed"
            android:layout_gravity="center"/>


    <Button android:layout_width="match_parent" android:layout_height="50dp"
            android:id="@+id/btnDeconfigure"
            android:text="@string/deconfigure"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/color_base"
            android:textColor="@color/color_text_pressed"
            android:layout_gravity="center"/>


    <Button android:layout_width="match_parent" android:layout_height="50dp"
            android:id="@+id/btnHistory"
            android:text="@string/history"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/color_base"
            android:textColor="@color/color_text_pressed"
            android:layout_gravity="center"/>



</LinearLayout>