<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="@dimen/card_height">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <ImageView android:layout_width="@dimen/img_width"
                           android:layout_height="@dimen/img_height"
                           android:src="@android:drawable/picture_frame"/>

                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="@dimen/tv_last_transaction_margin"
                              android:textAlignment="center"
                              android:layout_gravity="center"
                              android:text="@string/last_transaction"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="@dimen/last_transaction_height"
                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/dateLast"
                          android:text="@string/date"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/amountLast"
                          android:text="@string/amount"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/typeLast"
                          android:text="@string/type"/>
            </LinearLayout>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cancelLast"
                    android:layout_gravity="end"
                    android:text="@string/cancel"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_height"
            android:id="@+id/btnOther"
            android:text="@string/other"
            android:layout_marginTop="@dimen/main_btn_margin_top"
            android:layout_marginStart="@dimen/main_margin_start_end"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            android:backgroundTint="@color/color_base"
            android:textColor="@color/color_text_pressed"
            android:layout_gravity="center"/>

</LinearLayout>