<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="40dp"
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:textStyle="bold"
              android:textColor="@color/sample_splash_init"
              android:text="@string/payment_info"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="@dimen/main_btn_height"
              android:layout_marginStart="@dimen/main_margin_start_end"
              android:layout_marginEnd="@dimen/main_margin_start_end"
              android:id="@+id/et_doc"
              android:layout_gravity="center"
              android:layout_marginTop="16dp"
              android:inputType="number"
              android:paddingLeft="8dp"
              android:textSize="@dimen/et_cancel_size"
              android:textColor="@color/color_base"
              android:textColorHint="@color/color_base"
              android:background="@drawable/border_input"
              android:hint="@string/doc"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="@dimen/main_btn_height"
              android:layout_marginStart="@dimen/main_margin_start_end"
              android:layout_marginEnd="@dimen/main_margin_start_end"
              android:id="@+id/et_autCode"
              android:layout_gravity="center"
              android:layout_marginTop="16dp"
              android:inputType="number"
              android:textSize="@dimen/et_cancel_size"
              android:paddingLeft="8dp"
              android:textColor="@color/color_base"
              android:textColorHint="@color/color_base"
              android:background="@drawable/border_input"
              android:hint="@string/autcode"/>

    <!--<LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="@dimen/card_margin_top">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/payment_type"
                      android:textSize="@dimen/payment_type_size"
                      android:textStyle="bold"
                      android:layout_marginStart="@dimen/main_margin_start_end"
                      android:textColor="@color/color_base"
            />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <LinearLayout android:layout_width="@dimen/zero"
                          android:layout_height="wrap_content"
                          android:gravity="center_horizontal"
                          android:layout_weight="1"
                          android:orientation="vertical">

                <Button android:id="@+id/btn_creditOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_base"
                        android:backgroundTint="@color/color_btn_unpressed"
                        android:text="@string/credit"
                />
            </LinearLayout>

            <LinearLayout android:layout_width="@dimen/zero"
                          android:layout_height="wrap_content"
                          android:gravity="center_horizontal"
                          android:layout_weight="1"
                          android:orientation="vertical">

                <Button android:id="@+id/btn_debitOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_btn_unpressed"
                        android:textColor="@color/color_base"
                        android:text="@string/debit"/>
            </LinearLayout>

            <LinearLayout android:layout_width="@dimen/zero"
                          android:layout_height="wrap_content"
                          android:gravity="center_horizontal"
                          android:layout_weight="1"
                          android:orientation="vertical">

                <Button android:id="@+id/btn_voucherOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_btn_unpressed"
                        android:textColor="@color/color_base"
                        android:text="@string/voucher"
                />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_spinner"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <Spinner
                android:id="@+id/spinner_cancel_other"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        <Button
            android:id="@+id/btnCancelOther"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:text="Cancel payment"
            android:layout_marginEnd="16dp" android:layout_marginTop="40dp"/>
    </LinearLayout>


</LinearLayout>